--- a/assets/css/Login.css
+++ b/assets/css/Login.css
@@ -70,29 +70,30 @@ h2 {
   margin-bottom: 20px;
 }
 
-.form-group {
-  display: flex;
-  font-family: Arial, sans-serif;
-  justify-content: center;
-  flex-direction: column;
-  background-color: #fff;
-  border-radius: 5px;
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
-.ID {
-  margin-bottom: 20px;
-}
-
-label {
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-input {
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 3px;
+.form-group ul {
   width: 100%;
+  height: 45px;
+}
+
+.form-group li {
+  float: left;
+}
+
+.form-group li:first-child {
+  width: 100px;
+  padding: 10px 0 0 0;
+}
+
+.form-group li input {
+  width: 200px;
+  height: 34px;
 }
 
 .button-container {
