--- a/assets/css/Login.css
+++ b/assets/css/Login.css
@@ -67,7 +67,6 @@ body {
 
 h2 {
   font-size: 35px;
-  margin-bottom: 20px;
 }
 
 ul,
@@ -94,17 +93,12 @@ li {
 .form-group li input {
   width: 200px;
   height: 34px;
-}
-
-.button-container {
-  margin-top: 30px;
-  flex-direction: column;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  background-color: #d5dddfd2;
+  border: none;
 }
 
 button {
+  margin-top: 10px;
   padding: 10px 30px;
   background-color: #449fb1;
   color: #fff;
@@ -121,7 +115,7 @@ button:hover {
 }
 
 .question {
-  margin-top: 10px;
+  margin-top: 15px;
   font-family: Arial, sans-serif;
   font-size: 8px;
   color: gray;
@@ -130,6 +124,7 @@ button:hover {
 .question-sign {
   margin-bottom: 6px;
 }
+
 .footer {
   position: fixed;
   bottom: 0;
