--- a/assets/css/Sign Up.css
+++ b/assets/css/Sign Up.css
@@ -54,6 +54,31 @@ body {
   color: white;
 }
 
+@media screen and (max-width: 768px) {
+  .menu,
+  .menu2 {
+    display: none;
+  }
+  .dropdown-menu a {
+    text-decoration: none;
+    color: white;
+  }
+  .dropdown-menu {
+    display: block;
+    list-style: none;
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .menu,
+  .menu2 {
+    display: flex-end;
+  }
+  .dropdown-menu {
+    display: none;
+  }
+}
+
 h2 {
   font-size: 35px;
 }
@@ -86,7 +111,7 @@ li {
 }
 
 .signup li:first-child {
-  width: 120px;
+  width: 115px;
   padding: 6px 0 0 0;
 }
 
