--- a/assets/css/Authentication View.css
+++ b/assets/css/Authentication View.css
@@ -62,6 +62,14 @@ body {
   color: white;
 }
 
+.menu a:hover {
+  color: #3344ff;
+}
+
+.menu2 a:hover {
+  color: #3344ff;
+}
+
 @media screen and (max-width: 768px) {
   .menu,
   .menu2 {
