Menu2 폰트 사이즈 수정

--- a/assets/css/My Page.css
+++ b/assets/css/My Page.css
@@ -49,8 +49,13 @@ body {
   margin-top: 8px;
 }
 
+.menu1-1 {
+  margin-left: 25px;
+}
+
 .menu2 {
   margin-top: 10px;
+  font-size: 18px;
 }
 
 .menu a {
