--- a/assets/css/Login.css
+++ b/assets/css/Login.css
@@ -79,6 +79,9 @@ body {
     display: block;
     list-style: none;
   }
+  .dropdown-menu a:hover {
+    color: #3344ff;
+  }
 }
 
 @media screen and (min-width: 769px) {
