--- a/assets/css/report.css
+++ b/assets/css/report.css
@@ -216,6 +216,29 @@ td:first-child {
   background-color: rgba(228, 228, 225, 0.806);
 }
 
+.resetButton {
+  margin-left: 70%;
+}
+
+.submitButton {
+  margin-left: 1%;
+}
+
+button {
+  margin-top: 5px;
+  padding: 10px 30px;
+  background-color: #449fb1;
+  color: #fff;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
+  font-size: 16px;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
 .footer {
   position: fixed;
   bottom: 0;
