--- a/assets/css/chat.css
+++ b/assets/css/chat.css
@@ -1,61 +1,133 @@
-.title {
-    color: black;
-    font-size: 40px;
-    margin-left: 43%;
-    margin-top: 3%;
+@media screen and (max-width: 768px) {
+    .menu,
+    .menu2 {
+      display: none;
+    }
+    .dropdown-menu a {
+      font-size: 12px;
+      text-decoration: none;
+      color: white;
+    }
+    .dropdown-menu {
+      display: block;
+      list-style: none;
+    }
+    .dropdown-menu a:hover {
+      color: #3344ff;
+    }
   }
   
-  .chat-container {
+  @media screen and (min-width: 769px) {
+    .menu,
+    .menu2 {
+      display: flex-end;
+    }
+    .dropdown-menu {
+      display: none;
+    }
+  }
+
+  section {
+    height: 50vh;
+    width: 1200px;
+    margin: 0 auto;
+  }
+  
+  .chat-title {
+    margin: 20px 0;
+    padding: 3px 10px;
     display: flex;
-    align-items: center;
+    justify-content: space-between;
+  }
+
+  .roomname {
+    color: #666666;
+  }
+
+  #chatlist_btn {
+    border: 0;
+    border-radius: 7px;
+    background-color: #449fb1;
     padding: 10px;
-    border-bottom: 1px solid #ddd;
-    margin-left: 15%;
-    margin-right: 10%;
+    color: white;
+  }
+
+  .chat-content {
+    overflow: auto;
+  }
+
+  .date {
+    text-align: center;
+    margin: 0 auto;
+    background-color: #646669;
+    color: white;
+    border-radius: 10px;
+    width: 20%;
+    height: 27px;
+    font-size: 13px;
+    text-align: center;
+    vertical-align: middle;
+    padding-top: 4px;
   }
   
-  .profile-image {
-    width: 7%;
-    height: 10%;
-    border-radius: 50%;
-    margin-right: 10px;
+  .warning {
+    text-align: center;
+    margin: 15px auto 0 auto;
+    background-color: #646669;
+    color: white;
+    border-radius: 5px;
+    font-size: 15px;
+    width: 580px;
+    height: 70px;
+    padding: 8px;
   }
-  
-  .chat-details {
-    flex: 1;
+
+  .chat-ms-content {
+    width: 950px;
+    height: 45vh;
+    margin: 10px auto;
   }
-  
-  .chat-details2 {
-    display: flex;
-    flex-direction: column;
+
+  .chat-message > div {
+    background-color: #9090ee;
+    color: #e1e1e1;
+    border-radius: 0.8em;
+    padding: 0.4em;
+    margin: 0.4em 0;
+    display: inline-block;
+    white-space: pre-wrap;
+    max-width: 80%;
+    word-wrap: break-word;
+  }
+
+  .chat-message.me {
     text-align: right;
   }
-  
-  .nickname {
-    font-weight: bold;
+
+  .chat-message.me > div {
+    background-color: #89e6a0;
+    color: #ffffff;
+    text-align: left;
   }
   
-  .content {
-    font-size: 12px;
-    color: #888;
+  .form-control {
+    position: fixed;
+    bottom: 80px;
+    left: 350px;
+    width: 1000px;
+    padding: 10px;
+    border: 1px solid black;
+    border-radius: 5px;
   }
   
-  .time {
-    font-size: 12px;
-    color: #888;
+  .chat-input input {
+    flex-grow: 1;
+    padding: 5px;
+    border: none;
+    border-radius: 5px;
   }
   
-  .chat-count {
-    font-size: 14px;
-    color: white;
-    background-color: #ff0000;
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-left: auto;
-    margin-top: 5px;
+  .chat-input button {
+    cursor: pointer;
+    border: none;
   }
-  
