--- a/assets/css/changePassword.css
+++ b/assets/css/changePassword.css
@@ -120,24 +120,26 @@ li {
 }
 
 .form-group ul {
-  width: auto;
+  width: 400px;
   max-width: 100%;
   height: auto;
   display: flex;
+  justify-content: space-between;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 2px;
 }
 
 .form-group li:first-child {
-  padding-top: 20px;
+  padding-top: 10px;
   padding: 3px 0 0 0;
 }
 
 .form-group li input {
-  width: 200px;
+  width: 250px;
   height: 40px;
   background-color: #d5dddfd2;
   border: none;
+  padding: 5px 10px;
 }
 
 .text {
