--- a/assets/css/aboutUs.css
+++ b/assets/css/aboutUs.css
@@ -1,64 +1,106 @@
-  .side-menu {
-    position: fixed;
-    top: 21vh;
-    left: 0;
-    color: #000000;
-    height: 50%;
-    width: 250px;
-    margin-top: 10vh;
-    margin-left: 20px;
-    padding: 10px;
-    transition: none;
-    z-index: 1000;
-  }
-  
-  .side-menu.open {
-    left: -300px;
-  }
-  
-  .questions {
-    font-size: 24px;
-    font-weight: bold;
-    text-decoration: none;
-    margin-bottom: 25px;
-    color: black;
-  }
-  
-  .questions a:hover {
-    color: #ff5733;
-  }
-  
-  .menu-list {
-    list-style: none;
-    padding: 20px;
-  }
-  
-  .menu-list li {
-    margin-bottom: 10px;
-  }
-  
-  .menu-list li a {
-    text-decoration: none;
-    color: #0e0b0b;
-    font-size: 18px;
-    display: block;
-    transition: color 0.3s;
-  }
-  
-  .menu-list li a:hover {
-    color: #ff5733;
-  }
-  
-  .present {
-    font-weight: bold;
-  }
-  
-  .joongobooks {
-    text-align: left;
-    margin-left: 25%;
-    margin-top: 7%;
-  }
-  
-  .joongo {
-    margin-bottom: 20px;
-  }
+section {
+  width: 100%;
+  height: 60vh;
+  margin: 50px auto;
+  display: flex;
+  align-items: center;
+}
+
+.side-menu {
+  color: #000000;
+  width: 45%;
+  height: 400px;
+  margin: 30px 50px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  border-right: 2px solid gray;
+}
+
+.project {
+  margin-bottom: 30px;
+}
+
+.project > h2 {
+  margin-bottom: 10px;
+}
+
+.project > ul {
+  list-style: none;
+}
+
+.project > ul li {
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
+.project > ul a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.project > ul a:hover {
+  color: rgb(189, 51, 74);
+}
+
+.questions {
+  margin-bottom: 30px;
+}
+
+.questions > a {
+  text-decoration: none;
+  color: #000000;
+  font-size: 24px;
+  font-weight: bolder;
+}
+
+.questions > a:hover {
+  color: rgb(189, 51, 74);
+}
+
+.ask > h2 {
+  margin-bottom: 10px;
+}
+
+.ask > ul {
+  list-style: none;
+}
+
+.ask > ul li {
+  margin-left: 30px;
+  margin-bottom: 10px;
+}
+
+.ask > ul a {
+  text-decoration: none;
+  color: #000000;
+}
+
+.ask > ul a:hover {
+  color: rgb(189, 51, 74);
+}
+
+.joongobooks {
+  height: 380px;
+}
+
+.joongo {
+  padding-top: 20px;
+  padding-bottom: 10px;
+}
+
+.joongobooks_greeting {
+  padding-right: 60px;
+  gap: 3px;
+}
+
+.joongobooks_greeting > p {
+  margin-bottom: 5px
+}
+
+.joongobooks-lastthx {
+  margin-top: 30px;
+  font-size: 30px;
+  text-align: right;
+  font-family: Arial, Helvetica, sans-serif;
+}
