--- a/assets/css/bookdetail.css
+++ b/assets/css/bookdetail.css
@@ -1,221 +1,235 @@
-.purchase {
-  width: 1000px;
-  height: 75vh;
+section {
+  width: 1200px;
   margin: 0 auto;
-}
-  
-a:-webkit-any-link {
-  text-decoration: none;
+  padding-top: 20px;
 }
 
-.book {
-  padding-top: 20px;
+.bookdetail_content {
   display: flex;
+  justify-content: space-between;
   align-items: center;
 }
 
-.book-img{
-  width: 50%;
+.bookdetail-img {
+  width: 45%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.book-details {
-  width: 50%;
-  padding-top: 10px;
-  width: 60%;
+.bookdetail-img > img {
+  max-width: 350px;
+  max-height: 500px;  
 }
 
-.book-details > h5 {
-  color: rgb(95, 95, 99);
+.bookdetail-info {
+  width: 54%;
+  height: 500px;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
 }
 
-.book-name {
-  width: fit-content;
-  font-size: 40px;
-  font-weight: bold;
+.bookdetail-title {
+  font-size: 18px;
+  margin-bottom: 15px;
 }
-  .buttons {
-    align-items: flex-start;
-  }
-  
-  .filter-buttons button {
-    background-color: #f4f4f4;
-    border: none;
-    padding: 5px 10px;
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-bottom: 10px;
-    cursor: pointer;
-    display: inline-block;
-  }
-  
-  .filter-buttons button a {
-    text-decoration: none;
-    color: inherit;
-    font-size: 5px;
-  }
-  
-  .filter-buttons button:hover {
-    background-color: #bbbcc2;
-  }
-  
-  /* page_nation */
-  .page_wrap {
-    display: inline-block;
-  }
-  
-  .page_nation {
-    display: inline-block;
-  }
-  
-  .page_nation .none {
-    display: none;
-  }
-  
-  .page_nation a {
-    display: block;
-    margin: 0 3px;
-    float: left;
-    border: 1px solid #e6e6e6;
-    width: 20px;
-    height: 20px;
-    line-height: 20px;
-    text-align: center;
-    background-color: #fff;
-    font-size: 13px;
-    color: #999999;
-    text-decoration: none;
-  }
-  
-  .page_nation .arrow {
-    border: 1px solid #ccc;
-  }
-  
-  .page_nation .pprev {
-    background: #f8f8f8 url("../img/page_pprev.png") no-repeat center center;
-    margin-left: 0;
-  }
-  
-  .page_nation .prev {
-    background: #f8f8f8 url("../img/page_prev.png") no-repeat center center;
-    margin-right: 7px;
-  }
-  
-  .page_nation .next {
-    background: #f8f8f8 url("../img/page_next.png") no-repeat center center;
-    margin-left: 7px;
-  }
-  
-  .page_nation .nnext {
-    background: #f8f8f8 url("../img/page_nnext.png") no-repeat center center;
-    margin-right: 0;
-  }
-  
-  .page_nation a.active {
-    background-color: #42454c;
-    color: #fff;
-    border: 1px solid #42454c;
-  }
-  
-  .update-item {
-    position: absolute;
-    background-color: #449fb1;
-    color: white;
-    border: none;
-    padding: 10px 10px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 12px;
-    margin-left: 35%;
-    text-align: right;
-    margin-top: -15px;
-  }
-  
-  .update-item a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .update-item:hover {
-    background-color: #3344ff;
-  }
-  
-  /* book */
 
-  .book img {
-    max-width: 28%;
-  }
-  
+.bookdetail-publish, 
+.bookdetail-status,
+.bookdetail-sailer,
+.bookdetail-about {
+  list-style-type: none;
+  display: flex;
+}
 
-  
+.bookdetail-publish li {
+  border-right: 1px solid gray;
+  color: gray;
+  font-size: 15px;
+  text-align: left;
+  width: 100px;
+  height: 22px;
+}
 
-  
-  .book-info {
-    display: flex;
-  }
-  
-  .book-status,
-  .info {
-    display: flex;
-  }
-  
-  .exp {
-    color: #686868;
-  }
-  
-  .book-info li {
-    list-style: none;
-    font-size: 12px;
-  }
-  
-  .book-status li,
-  .info li {
-    list-style: none;
-    font-size: 16px;
-  }
-  
-  ul.book-info,
-  ul.book-status,
-  ul.info,
-  ul.exp {
-    margin: 0;
-    padding: 0;
-    margin-top: 20px;
-  }
-  
-  .book2 {
-    margin-right: 10px;
-    padding-right: 10px;
-    border-right: 1.5px solid rgba(60, 60, 60, 0.726);
-  }
-  
-  .book3 {
-    margin-right: 10px;
-    padding-right: 10px;
-  }
-  
-  .saler {
-    margin-top: 5px;
-    text-align: center;
-  }
-  
-  .chat {
-    background-color: #449fb1;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 14px;
-    margin-top: 40px;
-    margin-right: 10px;
-  }
-  
-  .chat a {
-    color: white;
-    text-decoration: none;
-  }
-  
-  .chat:hover {
-    background-color: #6973e6;
-  }
-  
+.bookdetail-publish li:nth-child(1) {
+  padding-left: 10px;
+  padding-right: 20px;
+  margin-right: 10px;
+}
+
+.bookdetail-publish li:nth-child(2) {
+  padding-left: 10px;
+}
+
+.bookdetail-status {
+  font-size: 24px;
+  font-weight: 700;
+  gap: 30px;
+  margin-top: 10px;
+}
+
+.bookdetail-sailer {
+  font-size: 24px;
+  font-weight: 700;
+  margin-top: 20px;
+}
+
+.bookdetail-about {
+  padding-top: 20px;
+  font-size: 17px;
+}
+
+.bookdetail-about li {
+  border: 1px solid gray;
+  border-radius: 3px;
+  width: 80%;
+  height: 30vh;
+}
+
+.bookdetail-btn {
+  margin-top: 20px;
+  display: flex;
+  gap: 30px;
+}
+
+.bookdetail-btn a {
+  text-decoration: none;
+  padding: 10px 30px;
+  color: white;
+  background-color: #449fb1;
+  border-radius: 7px;
+  text-align: center;
+}
+
+.delete-btn-book{
+  text-decoration: none;
+  padding: 10px 30px;
+  color: white;
+  background-color: #449fb1;
+  border-radius: 7px;
+  border: 0;
+  text-align: center;
+}
+
+.chat-btn{
+  text-decoration: none;
+  padding: 10px 30px;
+  color: white;
+  background-color: #449fb1;
+  border-radius: 7px;
+  border: 0;
+  text-align: center;
+}
+
+/* comment */
+.conmment-content {
+  width: 1000px;
+  margin: 0 auto;
+}
+
+.conmment-content > h2 {
+  margin-top: 60px;
+}
+
+.comment-form {
+  margin-top: 20px;
+}
+
+.comment-input {
+  width: 85%;
+  height: 40px;
+  border: 1px solid rgb(190, 186, 186);
+  border-radius: 6px;
+}
+
+#comment-btn {
+  height: 40px;
+  padding: 0 40px;
+  border: 0;
+  border-radius: 6px;
+  color: white;
+  background-color: #275c66;
+}
+
+.comment-list{
+  margin-bottom: 150px;
+}
+
+.comment-list > h2 {
+  margin-top: 60px;
+  margin-bottom: 25px;
+}
+
+.comment-detail,
+.recomment-detail {
+  display: flex;
+  margin-bottom: 15px;
+}
+
+.comment-detail > img {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.comment-username {
+  padding-top: 5px;
+  padding-right: 20px;
+}
+
+.comment-detail > ul {
+  list-style-type: none;
+  width: 70%;
+  display: flex;
+}
+
+.comment-detail > ul li {
+  padding: 0 10px;
+}
+
+.comment-detail > ul li:nth-child(2) {
+  padding-top: 9px;
+  font-size: 5px;
+}
+
+.recomment-detail {
+  margin-left: 40px;
+}
+
+.recomment-detail > img {
+  width: 30px;
+  margin-right: 10px;
+}
+
+.recommnet-username {
+  padding-top: 5px;
+  padding-right: 20px;
+}
+
+.recomment-detail > ul {
+  list-style-type: none;
+  width: 70%;
+  display: flex;
+}
+
+.recomment-detail > ul li {
+  padding: 0 10px;
+}
+
+.recomment-detail > ul li:nth-child(2) {
+  padding-top: 9px;
+  font-size: 5px;
+}
+
+.delete-btn-div {
+  width: 20%;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.comment-delete-btn {
+  border: 0;
+  padding: 2px 5px;
+  background-color: #4988db;
+  color: white;
+}
