--- a/assets/css/createPost.css
+++ b/assets/css/createPost.css
@@ -1,37 +1,67 @@
-section {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 20px;
+.createbook_title {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  margin: 10px 0;
 }
 
-.left-section,
-.right-section {
-  flex: 1;
-  padding: 20px;
+section {
+  width: 1200px;
+  height: 65vh;
+  margin: 0 auto 80px;
+  display: flex;
+  justify-content: space-between;
+  overflow: scroll;
 }
 
 .left-section {
+  width: 50%;
   border-right: 1px solid #ccc;
 }
 
+.img-group > h2 {
+  margin-top: 20px;
+  text-align: center;
+}
+
 .img-group {
-  margin-left: 18%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .book-cover {
-  height: 400px;
-  display: block;
+  height: 380px;
+  width: 280px;
+  display: flex;
+  justify-content: center;
+  
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
 ul,
 li {
-  margin: 0;
-  padding: 0;
   list-style: none;
 }
 
+.input-group > #attachImageButton {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0 70px;
+}
+
+.right-section {
+  width: 50%;
+  margin: 10px
+}
+
+.form-group {
+  width: 100%;
+}
 .form-group ul {
   width: 100%;
   height: 45px;
@@ -44,14 +74,14 @@ li {
 }
 
 .form-group li input {
-  width: 60%;
+  width: 550px;
   height: 30px;
   background-color: #d5dddfd2;
   border: none;
 }
 
 .form-group li select {
-  width: 60%;
+  width: 550px;
   height: 35px;
   background-color: #d5dddfd2;
   border: none;
@@ -68,17 +98,22 @@ select {
 }
 
 textarea {
-  width: 300px;
+  width: 550px;
   height: 40px;
   resize: none;
 }
 
-.input-group button#attachImageButton {
-  display: block;
-  margin: 0 35%;
+
+.button-group {
+  display: flex;
+  gap: 20px;
+  justify-content: center;
 }
 
-button {
+#reset, 
+#register,
+#attachImageButton {
+  width: 200px;
   margin-top: 20px;
   padding: 10px 20px;
   background-color: #007bff;
