--- a/assets/css/mypage_main.css
+++ b/assets/css/mypage_main.css
@@ -1,5 +1,5 @@
 section {
-  width: 1200px;
+  width: 100%;
   margin: 20px auto;
   height: 60vh;
   display: flex;
@@ -16,7 +16,8 @@ ul, li, a {
 .side-menu {
   width: 25%;
   height: 140px;
-  margin: 142px 20px 142px;
+  margin: 142px 50px 142px;
+  border-right: 1px solid gray;
 }
 
 .profile {
@@ -50,7 +51,7 @@ ul, li, a {
 }
 
 .profile_img > img {
-  width: 250px;
+  width: 200px;
   padding-top: 20px;
 }
 
@@ -66,12 +67,16 @@ ul, li, a {
   margin-bottom: 5px;
 }
 
-#profile-btn {
+.profile-btn {
+  background-color: #449fb1;
   width: 300px;
-  height: 50px;
+  height: 35px;
   border: 0;
   border-radius: 10px;
   color: white;
-  background-color: #449fb1;
-  font-size: 16px;
+  cursor: pointer;
+}
+
+.profile-btn:hover {
+  background-color: #275c66;
 }
