🎨 Style : 불필요한 스타일 코드 삭제 및 추가 태그 관련 스타일생성

--- a/assets/css/changePassword.css
+++ b/assets/css/changePassword.css
@@ -1,62 +1,16 @@
-@media screen and (max-width: 768px) {
-  .menu,
-  .menu2 {
-    display: none;
-  }
-  .dropdown-menu a {
-    font-size: 12px;
-    text-decoration: none;
-    color: white;
-  }
-  .dropdown-menu {
-    display: block;
-    list-style: none;
-  }
-  .dropdown-menu a:hover {
-    color: #3344ff;
-  }
-  .profile,
-  .purchase-history {
-    display: none;
-  }
-  .side-dropdown-menu a {
-    font-size: 12px;
-    text-decoration: none;
-    color: rgb(0, 0, 0);
-  }
-  .side-dropdown-menu {
-    display: block;
-    list-style: none;
-  }
-  .side-dropdown-menu a:hover {
-    color: #ff5733;
-  }
+section {
+  width: 100%;
+  margin: 20px auto;
+  height: 60vh;
+  display: flex;
+  justify-content: center;
 }
 
-@media screen and (min-width: 769px) {
-  .menu,
-  .menu2 {
-    display: flex-end;
-  }
-  .dropdown-menu {
-    display: none;
-  }
-  .profile,
-  .purchase-history {
-    display: flex-end;
-  }
-  .side-menu {
-    border-right: 2px solid #449fb1;
-  }
-  .side-dropdown-menu {
-    display: none;
-  }
+ul, li, a {
+  list-style: none;
+  text-decoration: none;
 }
 
-.h2 {
-  color: black;
-  font-size: 20px;
-}
 
 .side-menu {
   position: fixed;
@@ -146,7 +100,7 @@ li {
   margin-top: 8px;
 }
 
-button {
+#changepassword-btn {
   margin-top: 5px;
   padding: 10px 30px;
   background-color: #449fb1;
@@ -158,7 +112,7 @@ button {
   width: 40vh;
 }
 
-button:hover {
+#changepassword-btn:hover {
   background-color: #0056b3;
 }
 
