🎨 Style : booklist 화면 초과되어 출력되는 오류 수정

--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -1,12 +1,11 @@
 .purchase {
   width: 1200px;
-  height: 75vh;
   margin: 0 auto;
   align-items: center;
 }
 
 .container {
-  padding: 20px;
+  padding: 20px 20px 100px 20px;
 }
 
 .container > h2 {
