--- a/assets/css/password.css
+++ b/assets/css/password.css
@@ -55,15 +55,16 @@ li {
 
 .form-group li {
   float: left;
+  padding-bottom: 10px;
 }
 
 .form-group li:first-child {
-  width: 100px;
+  width: 120px;
   padding: 10px 0 0 0;
 }
 
 .form-group li input {
-  width: 200px;
+  width: 230px;
   height: 45px;
   background-color: #d5dddfd2;
   border: none;
@@ -72,6 +73,7 @@ li {
 
 button {
   padding: 10px 20px;
+  width: 350px;
   background-color: #007bff;
   color: white;
   border: none;
