--- a/assets/css/password.css
+++ b/assets/css/password.css
@@ -71,13 +71,26 @@ li {
   margin-right: 10px;
 }
 
+.id-confirm-btn{
+  padding: 10px 20px;
+  width: 100px;
+  height: 45px;
+  background-color: #007bff;
+  color: white;
+  border-radius: 7px;
+  font-size: 16px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+  margin-left: auto;
+}
+
 button {
   padding: 10px 20px;
   width: 350px;
   background-color: #007bff;
   color: white;
   border: none;
-  border-radius: 3px;
+  border-radius: 7px;
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s;
