🎨 Style : Pagination 적용을 위한 코드 및 스타일 수정

--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -75,7 +75,7 @@ a:-webkit-any-link {
   display: none;
 }
 
-.page_nation a {
+.page_nation button {
   display: block;
   margin: 0 3px;
   float: left;
