--- a/assets/css/changePassword.css
+++ b/assets/css/changePassword.css
@@ -1,7 +1,9 @@
+body {
+  height: 100%;
+}
 section {
   width: 100%;
-  margin: 20px auto;
-  height: 60vh;
+  margin: 20px auto 90px;
   display: flex;
   justify-content: center;
 }
@@ -12,68 +14,106 @@ ul, li, a {
 }
 
 
+/* side menu ---------------------------- */
 .side-menu {
-  position: fixed;
-  top: 21vh;
-  left: 0;
-  color: #000000;
-  height: 50%;
-  width: 250px;
-  margin-top: 10vh;
-  margin-left: 20px;
-  padding: 10px;
-  transition: none;
-  z-index: 1000;
+  width: 25%;
+  margin-left: 30px;
+  padding-right: 30px;
+  border-right: 1px solid gray;
 }
 
-.side-menu.open {
-  left: -300px;
+.side-menu-profile{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.profile_img > img {
+  width: 170px;
+}
+
+.userinfo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+}
+
+.username {
+  font-size: 35px;
+  margin-bottom: 5px;
+}
+
+.aboutme {
+  color: rgb(161, 161, 161);
+}
+
+.profile-btn {
+  background-color: #449fb1;
+  width: 120px;
+  height: 45px;
+  border: 0;
+  border-radius: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.profile-btn:hover {
+  background-color: #275c66;
+}
+
+.history-list {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  border-top: 1px solid #556080
+
+}
+
+.history-list-title{
+  font-size: 35px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .menu-list {
-  list-style: none;
-  padding: 20px;
+  text-decoration: none;
 }
 
-.menu-list li {
-  margin-bottom: 15px;
+.menu-list > li {
+  padding-bottom: 10px;
+  cursor: pointer;
 }
 
 .menu-list li a {
   text-decoration: none;
-  color: #0e0b0b;
-  font-size: 18px;
-  display: block;
-  transition: color 0.3s;
+  color: black;
 }
 
 .menu-list li a:hover {
-  color: #ff5733;
+  color: rgb(43, 108, 206);
 }
 
-.form-group {
+/* changepassword menu ---------------------------- */
+
+.password-container{
+  width: 75%;
+}
+
+.password-group {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 70vh;
   padding: 20px;
   flex-direction: column;
-  margin-left: 30vh;
   gap: 30px;
 }
 
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.present {
-  font-weight: bold;
-}
-
-.form-group ul {
+.password-group ul {
   width: 400px;
   max-width: 100%;
   height: auto;
@@ -83,12 +123,12 @@ li {
   gap: 2px;
 }
 
-.form-group li:first-child {
+.password-group li:first-child {
   padding-top: 10px;
   padding: 3px 0 0 0;
 }
 
-.form-group li input {
+.password-group li input {
   width: 250px;
   height: 40px;
   background-color: #d5dddfd2;
