--- a/assets/css/shop.css
+++ b/assets/css/shop.css
@@ -140,6 +140,7 @@ a:-webkit-any-link {
 }
 
 .book {
+  width: 100%;
   height: 150px;
   display: flex;
   align-items: center;
@@ -147,9 +148,18 @@ a:-webkit-any-link {
   border-bottom: 1px solid rgb(196, 193, 193);
 }
 
+.book-index {
+  margin-right: 20px;
+}
+
+.book-sale-condition {
+  font-size: 17px;
+  font-weight: bold;
+}
+
 .book img {
-  max-width: 110px;
-  max-height: 110px;
+  width: 80px;
+  height: 90px;
   height: auto;
   margin: 0 25px;
 }
