--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,3 +1,7 @@
+section {
+  padding-top: 110px;
+}
+
 .login-container {
   display: flex;
   justify-content: center;
@@ -6,7 +10,6 @@
   padding: 20px;
   flex-direction: column;
   gap: 30px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
