--- a/assets/css/password.css
+++ b/assets/css/password.css
@@ -1,31 +1,6 @@
-@media screen and (max-width: 768px) {
-  .menu,
-  .menu2 {
-    display: none;
-  }
-  .dropdown-menu a {
-    text-decoration: none;
-    color: white;
-  }
-  .dropdown-menu {
-    display: block;
-    list-style: none;
-  }
-  .dropdown-menu a:hover {
-    color: #3344ff;
-  }
+section {
+  padding-top: 110px;
 }
-
-@media screen and (min-width: 769px) {
-  .menu,
-  .menu2 {
-    display: flex-end;
-  }
-  .dropdown-menu {
-    display: none;
-  }
-}
-
 .password-container {
   display: flex;
   justify-content: center;
@@ -34,7 +9,6 @@
   padding: 20px;
   flex-direction: column;
   gap: 30px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
