--- a/assets/css/signup.css
+++ b/assets/css/signup.css
@@ -1,138 +1,9 @@
-.h2 {
-  color: black;
-  font-size: 20px;
-}
-
-.side-menu {
-  color: #000000;
-  width: 250px;
-  margin-top: 10vh;
-  margin-left: 20px;
-  border-right: 2px solid #449fb1;
-}
-
-.side-menu.active {
-  left: 0;
-}
-
-.menu-list {
-  list-style: none;
-  padding: 20px;
-}
-
-.menu-list li {
-  margin-bottom: 15px;
-}
-
-.menu-list li a {
-  text-decoration: none;
-  color: #0e0b0b;
-  font-size: 18px;
-  display: block;
-  transition: color 0.3s;
-}
-
-.menu-list li a:hover {
-  color: #ff5733;
-}
-
-.profile {
-  display: flex;
-  align-items: center;
-  margin-left: 18%;
-  flex-direction: column;
-  margin-top: -27vh;
-}
-
-.profile img {
-  width: 20%;
-  margin-left: 0;
-}
-
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-}
-
-.username {
-  font-size: 40px;
-  margin-bottom: 6px;
-}
-
-.email {
-  font-size: 15px;
-}
-
-.profile-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 70vh;
-  padding: 20px;
-  flex-direction: column;
-  margin-top: -20vh;
-  margin-left: 18%;
-  gap: 30px;
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-.form-group ul {
-  width: 100%;
-  height: 45px;
-}
-
-.form-group li {
-  float: left;
-}
-
-.form-group li:first-child {
-  width: 100px;
-  padding: 10px 0 0 0;
-}
-
-.form-group li input {
-  width: 200px;
-  height: 34px;
-  background-color: #d5dddfd2;
-  border: none;
-}
-
-button {
-  margin-top: 10px;
-  padding: 10px 30px;
-  background-color: #449fb1;
-  color: #fff;
-  border: none;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 16px;
-  width: 100%;
-}
-
-button:hover {
-  background-color: #0056b3;
-}
-
-.footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  width: 100%;
-  background-color: #449fb1;
-  color: white;
-  text-align: center;
-  padding: 25px;
-}
-
 h2 {
   font-size: 35px;
+}
+
+section {
+  padding-top: 110px;
 }
 
 .signup-container {
@@ -143,7 +14,6 @@ h2 {
   padding: 20px;
   flex-direction: column;
   gap: 30px;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
 
 ul,
