--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ body {
 
 /* header --------------------------------- */
 .navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
   background-color: #449fb1;
   color: white;
   height: 100px;
@@ -148,6 +152,7 @@ body {
 
 /* main --------------------------------- */
 .main-content {
+  margin-top: 110px;
   display: flex;
   justify-content: center;
   align-items: center;
