--- a/assets/css/bookdetail.css
+++ b/assets/css/bookdetail.css
@@ -1,7 +1,7 @@
 section {
   width: 1200px;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 120px;
 }
 
 .bookdetail_content {
@@ -48,18 +48,17 @@ section {
   color: gray;
   font-size: 15px;
   text-align: left;
-  width: 100px;
   height: 22px;
 }
 
 .bookdetail-publish li:nth-child(1) {
-  padding-left: 10px;
   padding-right: 20px;
   margin-right: 10px;
 }
 
 .bookdetail-publish li:nth-child(2) {
   padding-left: 10px;
+  padding-right: 15px;
 }
 
 .bookdetail-status {
