--- a/assets/css/aboutUs.css
+++ b/assets/css/aboutUs.css
@@ -1,9 +1,9 @@
 section {
   width: 100%;
-  height: 60vh;
-  margin: 50px auto;
+  margin: 0 auto;
   display: flex;
   align-items: center;
+  padding: 110px 0;
 }
 
 .side-menu {
