--- a/assets/css/createPost.css
+++ b/assets/css/createPost.css
@@ -1,20 +1,21 @@
-section {
-  width: 1200px;
-  padding: 110px 0;
-  margin: 0 auto;
-}
-
 .createbook_title {
   width: 100%;
-  margin-bottom: 10px;
-}
-
-.createbook_title > h1 {
-  text-align: center;
-}
-
-.book-content{
   display: flex;
+  justify-content: center;
+  text-align: center;
+  padding-top: 110px;
+}
+
+section {
+  width: 1200px;
+  margin: 0 auto 80px;
+  display: flex;
+  justify-content: space-between;
+}
+
+ul,
+li {
+  list-style: none;
 }
 
 .left-section {
@@ -35,18 +36,13 @@ section {
 }
 
 .book-cover {
-  height: 420px;
-  width: 320px;
+  height: 380px;
+  width: 280px;
   display: flex;
   justify-content: center;
-  
+
   margin-top: 10px;
   margin-bottom: 20px;
-}
-
-ul,
-li {
-  list-style: none;
 }
 
 .input-group > #attachImageButton {
@@ -69,7 +65,6 @@ li {
   height: 45px;
   margin-bottom: 15px;
 }
-
 .form-group li:first-child {
   width: 100px;
   padding: 10px 0 0 0;
@@ -88,11 +83,9 @@ li {
   background-color: #d5dddfd2;
   border: none;
 }
-
 .fileInput {
   display: none;
 }
-
 input,
 select {
   border: 1px solid #ccc;
@@ -105,8 +98,8 @@ textarea {
   resize: none;
 }
 
-
 .button-group {
+  padding-top: 10px;
   display: flex;
   gap: 20px;
   justify-content: center;
