--- a/assets/css/developer.css
+++ b/assets/css/developer.css
@@ -1,7 +1,7 @@
 section {
     width: 100%;
-    height: 60vh;
-    margin: 50px auto;
+    margin: 0 auto;
+    padding: 110px 0;
     display: flex;
     align-items: center;
   }
