--- a/assets/css/fna.css
+++ b/assets/css/fna.css
@@ -2,8 +2,8 @@
 
 section {
   width: 100%;
-  height: 60vh;
-  margin: 50px auto;
+  margin: 0 auto;
+  padding: 110px 0;
   align-items: center;
 }
 
